# Cursovay_2

./: .coverage  .gitignore  README.md  pyproject.toml
src/: api_interactions.py  filehandler.py  main.py  vacancies.py
tests/: conftest.py  test_api_interactions.py  test_filehandler.py  test_main.py  test_vacancies.py
