[project]
name = "cursovay-2-0"
version = "0.1.0"
description = ""
authors = [
    { name = "Maslykou Vitalii", email = "9319899520@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "cursovay_2" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
